morph: fix text color for secondary and light cards in dark mode, #1282

--- a/docs/5/morph/bootstrap.css
+++ b/docs/5/morph/bootstrap.css
@@ -12801,6 +12801,9 @@ textarea.form-control-lg {
   background-color: #202428;
   box-shadow: inset 2px 2px 6px rgba(17, 19, 21, 0.2), inset -3px -2px 4px rgba(255, 255, 255, 0.05);
 }
+[data-bs-theme=dark] .card.bg-secondary, [data-bs-theme=dark] .card.bg-light {
+  color: #7b8ab8;
+}
 [data-bs-theme=dark] .modal-content,
 [data-bs-theme=dark] .popover,
 [data-bs-theme=dark] .toast {
